--- a/Proyecto/LoginRegister/Login.html
+++ b/Proyecto/LoginRegister/Login.html
@@ -35,6 +35,8 @@
                     <form action="" class="formularioRegister">
                         <h2>Registrarse</h2>
                         <input type="text" placeholder="Nombre">
+                        <input type="text" placeholder="Primer Apellido">
+                        <input type="text" placeholder="Segundo Apellido">
                         <input type="text" placeholder="Apodo">
                         <input type="text" placeholder="Correo Electronico">
                         <input type="password" placeholder="Contraseña">
