--- a/Proyecto/Perfil/Tipos/6/Perfil6.html
+++ b/Proyecto/Perfil/Tipos/6/Perfil6.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Perfil</title>
     <link rel="stylesheet" href="/Perfil/Tipos/6/Perfil6.css">
+    <script src="https://kit.fontawesome.com/b5e4f52ce9.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <main>
@@ -40,18 +41,15 @@
                 </h3>
 
                 <h2 class="Letra2">
-                    Galeria
+                    Actividades
                 </h2>
 
                 <button class="btn Galeria">Entrar</button>
             </header>
         </div>
-        <a href="http://127.0.0.1:5500/Perfil/Tipos/1/Perfil1.html"><button class="btnFondo1">Fondo 1</button></a>
-        <a href="http://127.0.0.1:5500/Perfil/Tipos/2/Perfil2.html"><button class="btnFondo2">Fondo 2</button></a>
-        <a href="http://127.0.0.1:5500/Perfil/Tipos/3/Perfil3.html"><button class="btnFondo3">Fondo 3</button></a>
-        <a href="http://127.0.0.1:5500/Perfil/Tipos/4/Perfil4.html"><button class="btnFondo4">Fondo 4</button></a>
-        <a href="http://127.0.0.1:5500/Perfil/Tipos/5/Perfil5.html"><button class="btnFondo5">Fondo 5</button></a>
-        <a href="http://127.0.0.1:5500/Perfil/Tipos/6/Perfil6.html"><button class="btnFondo6">Fondo 6</button></a>
+        <a href="http://127.0.0.1:5500/Perfil/Tipos/2/Perfil2.html"><button class="btnFondo2"><i class="fas fa-mountain"></i></button></a>
+        <a href="http://127.0.0.1:5500/Perfil/Tipos/4/Perfil4.html"><button class="btnFondo4"><i class="far fa-smile-beam"></i></button></a>
+        <a href="http://127.0.0.1:5500/Perfil/Tipos/6/Perfil6.html"><button class="btnFondo6"><i class="fas fa-tree"></i></button></a>
     </main>
 </body>
 </html>
