--- a/Proyecto/Top-Perfil/Top-Perfil.html
+++ b/Proyecto/Top-Perfil/Top-Perfil.html
@@ -7,16 +7,18 @@
     <title>Top-Perfil</title>
     <link rel="stylesheet" href="/Top-Perfil/Top-Perfil.css" media="all">
 </head>
-<body class="body">
-    <h1><bold class="centrarT">Profesional Mental Help(PMH)</bold></h1>
-    <break></break>
-    <div>
-    <img src="https://i.pinimg.com/originals/d6/f0/3a/d6f03ac304a95690d331c90305247b4a.jpg" class="CentrarImag">
-    </div>
-    <break></break>
-    <p>
-
-    </p>
-    <button type ="button" class="boton" class="centrarI" onclick="window.open('')">Inicio/Registrar</button>
+<body >
+    <main>
+        <div>
+            <header>
+                <img src="/Picture/Logo Rosado.jpeg" class="Imag">
+                <h1>Profesional Mental Help(PMH)</h1>
+                <img src="/Picture/pexels-mikhail-nilov-6530541.jpg" class="CentrarImag">
+                <p></p>
+                <button class="boton" onclick="window.open('http://127.0.0.1:5500/LoginRegister/Login.html')">Inicio/Registrar</button>
+            </header>
+            
+        </div>
+    </main>
 </body>
 </html>
